Modificacion en los enlaces de navegacion, agregue seccion de nosotros

--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -60,12 +60,12 @@
       </button>
       <!-- Secciones de la barra de navegación -->
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-around">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="productos.html">Productos</a>
+            <a class="nav-link" href="#productos">Productos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="recetas.html">Recetas</a>
@@ -96,7 +96,41 @@
                     <!-- Header -->
                 </header>
             </div>
-
+            <section class="about-section py-5">
+                <div class="container rounded shadow-lg bg-white">
+                  <div class="row align-items-center">
+                    <div class="col-lg-6 mb-4 mb-lg-0">
+                      <h2 class="section-title">Nosotros</h2>
+                      <p class="text-muted">
+                        En Carnicería Don Agustín, ubicada en el corazón de Boulogne, ofrecemos carne de la más alta calidad,
+                        seleccionada cuidadosamente para garantizar el mejor sabor y frescura. Nos enorgullece ser parte de la tradición argentina,
+                        brindando cortes premium y un servicio excepcional que refleja nuestra pasión por la excelencia.
+                      </p>
+                    </div>
+                    <div class="col-lg-6">
+                      <img src="images/carniceria2.jpg" alt="Carnicería" class="img-fluid rounded">
+                    </div>
+                  </div>
+                </div>
+              </section>
+            
+              <!-- Sección Misión y Visión -->
+              <section class="vision-section py-5">
+                <div class="container rounded shadow-lg bg-white">
+                  <div class="row align-items-center">
+                    <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
+                      <h2 class="section-title">Misión y Visión</h2>
+                      <p class="text-muted">
+                        Nuestra misión es llevar a cada hogar carnes de calidad superior, preservando la esencia de la cocina argentina y fomentando la confianza de nuestros clientes mediante un servicio cálido y profesional.<br><br>
+                        Nuestra visión es convertirnos en un referente local, expandiendo nuestra presencia y ofreciendo una experiencia que combine tradición y modernidad, siempre con un enfoque en la sostenibilidad y el compromiso con la comunidad.
+                      </p>
+                    </div>
+                    <div class="col-lg-6 order-lg-1">
+                      <img src="images/Carniceria.jpg" alt="Misión y Visión" class="img-fluid rounded">
+                    </div>
+                  </div>
+                </div>
+              </section>   
             <!-- <div class="col-12">
                 Main Content
                 <main class="row">
