--- a/public/index.html
+++ b/public/index.html
@@ -60,12 +60,12 @@
       </button>
       <!-- Secciones de la barra de navegación -->
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav w-100 justify-content-around">
+        <ul class="navbar-nav ms-auto">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="productos.html">Productos</a>
+            <a class="nav-link" href="#productos">Productos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="recetas.html">Recetas</a>
@@ -133,7 +133,7 @@
                     <!-- Slider -->
 
                     <!-- Featured Products -->
-                    <div class="col-12">
+                    <div class="col-12" id="productos">
                             <div class="col-12 py-3">
                                 <div class="row">
                                         <div class="col-10">
