cambios minimos, el tipo de letra y sus colores en el menú

--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,6 @@
             <a class="nav-link" href="#productos">Productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="recetas.html">Recetas</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="nosotros.html">Nosotros</a>
           </li>
           <li class="nav-item">
@@ -137,7 +134,7 @@
                             <div class="col-12 py-3">
                                 <div class="row">
                                         <div class="col-10">
-                                            <h2 style="font-family: 'Righteous', sans-serif;">Lista de mis productos</h2>
+                                            <h2 style="font-family: 'Open Sans', sans-serif;">Lista de mis productos</h2>
                                         </div>
                                 <div class="row" id="product-list">
                                     <!-- Product -->
@@ -217,7 +214,7 @@
             <div class="col-lg-3 col-sm-8 text-center text-sm-left mb-sm-0 mb-3">
                 <div class="row">
                     <div class="col-13">
-                        <h4>¿Quienes somos?</h4>
+                        <h4>¿Quiénes somos?</h4>
                     </div>
                     <div class="col-13 ">
                         <p>Somos una carnicería comprometida con ofrecerte los cortes de carne más frescos y de calidad. Nos destacamos por nuestra atención personalizada, brindándote productos que garantizan sabor y confianza</p>
