--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -65,12 +65,6 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#productos">Productos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="recetas.html">Recetas</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="nosotros.html">Nosotros</a>
           </li>
           <li class="nav-item">
@@ -251,7 +245,7 @@
             <div class="col-lg-3 col-sm-8 text-center text-sm-left mb-sm-0 mb-3">
                 <div class="row">
                     <div class="col-13">
-                        <h4>¿Quienes somos?</h4>
+                        <h4>¿Quiénes somos?</h4>
                     </div>
                     <div class="col-13 ">
                         <p>Somos una carnicería comprometida con ofrecerte los cortes de carne más frescos y de calidad. Nos destacamos por nuestra atención personalizada, brindándote productos que garantizan sabor y confianza</p>
