boton de wsp y api en el form

--- a/public/contacto.html
+++ b/public/contacto.html
@@ -195,7 +195,7 @@
                         <!-- Formulario -->
                         <div class="col-12">
                             <h2 class="text-center mb-4">Contáctanos</h2>
-                            <form action="send_email.php" method="post" class="p-4 bg-light border rounded">
+                            <form action="https://formspree.io/f/xeoqralo" method="POST" class="p-4 bg-light border rounded">
                                 <div class="mb-3">
                                     <label for="name" class="form-label">Nombre</label>
                                     <input type="text" class="form-control" id="name" name="name" required>
@@ -264,6 +264,9 @@
         </div>
 
     </div>
+    <a href="https://api.whatsapp.com/send?phone=1155555555" class="whatsapp-btn" id="whatsappButton" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+      </a>
 
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
