--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
                             <div class="col-12 py-3">
                                 <div class="row">
                                         <div class="col-10">
-                                            <h2 style="font-family: 'Open Sans', sans-serif;">Lista de mis productos</h2>
+                                            <h2 class="titulo-productos" style="font-family: 'Open Sans', sans-serif;">Lista de mis productos</h2>
                                         </div>
                                 <div class="row" id="product-list">
                                     <!-- Product -->
@@ -233,6 +233,9 @@
         </div>
 
     </div>
+    <a href="https://api.whatsapp.com/send?phone=1155555555" class="whatsapp-btn" id="whatsappButton" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+      </a>
 
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
