--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -265,6 +265,10 @@
 
     </div>
 
+    <a href="https://api.whatsapp.com/send?phone=1155555555" class="whatsapp-btn" id="whatsappButton" target="_blank">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+      </a>
+
     <script type="text/javascript" src="scripts/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/bootstrap.min.js"></script>
     
