agregue una calculadora de porciones y un programa de fidelidad

--- a/public/nosotros.html
+++ b/public/nosotros.html
@@ -124,7 +124,30 @@
                     </div>
                   </div>
                 </div>
-              </section>   
+              </section>  
+<div class="container py-0,5" id="programa-fidelidad" style="background-color: white; border-radius: 8px;">
+    <div class="row justify-content-center">
+        <div class="col-12 text-center mb-4">
+            <h2 class="titulo-programa-fidelidad" style="font-family: 'Open Sans', sans-serif; color: black;">¡Únete a nuestro Programa de Fidelidad!</h2>
+            <p style="color: black;">Acumula puntos con cada compra y canjéalos por descuentos y productos exclusivos. Cuanto más compras, más ahorras. ¡Es nuestra forma de agradecerte por confiar en Carnicería Don Agustín!</p>
+        </div>
+
+        <div class="col-12 col-md-6">
+            <h3>¿Cómo funciona?</h3>
+            <ul>
+                <li><strong>1 punto</strong> por cada $100 gastados.</li>
+                <li><strong>500 puntos</strong> = 10% de descuento en tu próxima compra.</li>
+                <li>¡Acumula puntos rápidamente con nuestras promociones exclusivas!</li>
+            </ul>
+            <button class="btn btn-primary">Ver Mis Puntos</button>
+        </div>
+
+        <div class="col-12 col-md-6">
+            <h3>Beneficios</h3>
+            <p>Este programa te ofrece una forma sencilla de ahorrar en cada compra. Además, al acumular puntos, podrás acceder a descuentos exclusivos y promociones especiales que solo nuestros miembros pueden aprovechar.</p>
+        </div>
+    </div>
+</div>
             <!-- <div class="col-12">
                 Main Content
                 <main class="row">
