agregue links de redes sociales con target=_blank para que se abran en una nueva pestaña

--- a/public/index.html
+++ b/public/index.html
@@ -221,11 +221,12 @@
                         </address>
                     </div>
                     <div class="col-12">
-                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-pinterest-p"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-                        <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100089299081310" class="social-icon" target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        <a href="https://x.com/Sanzot431" class="social-icon" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://pin.it/7h5uvqNb9" class="social-icon" target="_blank"><i class="fab fa-pinterest-p"></i></a>
+                        <a href="https://www.instagram.com/carniceria_sanagustin?igsh=djQ5NTliOTBiMDBt" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://youtube.com/@tecnicasdecortes?si=2J-eYZRFMawLHovG" class="social-icon" target="_blank"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </div>
