agrego link de google maps a la palabra ubicacion

--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="footer-logo">
-                            <a href="index.html">Ubicación</a>
+                            <a href="https://maps.app.goo.gl/s7xGiWj5ZG4dy13ZA">Ubicación</a>
                         </div>
                     </div>
                     <div class="col-12">
