agregue un banner en movimiento

--- a/public/index.html
+++ b/public/index.html
@@ -160,6 +160,9 @@
                             </div>
                         </div>
                     </div>
+                    <div class="promo-banner">
+                        <span>¡Hoy 20% de descuento pagando con Visa! No te lo pierdas.</span>
+                    </div>                    
                     <div class="col-12">
                         <hr>
                     </div>
